apps/vaultwarden/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-prod
    route.openshift.io/termination: edge
    route.openshift.io/insecure-policy: Redirect
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - vault.sigtom.dev
      secretName: vault-sigtom-tls
  rules:
    - host: vault.sigtom.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
