apps/vaultwarden/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-prod
spec:
  host: vault.sigtom.dev
  to:
    kind: Service
    name: vaultwarden
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    certificateSecretName: vault-sigtom-tls
